# hlsl2glslfork

./: .gitignore  .hgignore  CMakeLists.txt  Changelog.md  LICENSE.txt  README.md  StandAlone_vc8.sln  StandAlone_vc8.vcproj  hlsl2glslfork.qbs  hlslang.sln  hlslang.vcproj  hlslang.vcxproj  hlslang.vcxproj.filters  hlslang_vc8.vcproj  hlslang_vs2008.sln  hlslang_vs2010.sln  rakefile.rb
Docs/: HLSL2GLSL Documentation.doc
Docs/SourceDoc/html/: BaseTypes_8h-source.html  BaseTypes_8h.html  BaseTypes_8h__dep__incl.map  BaseTypes_8h__dep__incl.md5  CodeGen_8cpp.html  CodeGen_8cpp__incl.map  CodeGen_8cpp__incl.md5  Common_8h-source.html  Common_8h.html  Common_8h__dep__incl.map  Common_8h__dep__incl.md5  Common_8h__incl.map  Common_8h__incl.md5  ConstantUnion_8h.html  (+1103 more)
OGLCompilersDLL/: InitializeDll.cpp  InitializeDll.h
StandAlone/: StandAlone.cpp
hlsl2glsl/: StandAlone.cpp  attrib.cfg  hlsl2glsl.vcxproj  hlsl2glsl.vcxproj.filters
hlsl2glsl.xcworkspace/: contents.xcworkspacedata
hlslang.xcodeproj/: project.pbxproj
hlslang/GLSLCodeGen/: CodeGen.cpp  Link.cpp  glslCommon.cpp  glslCommon.h  glslFunction.cpp  glslFunction.h  glslOutput.cpp  glslOutput.h  glslStruct.cpp  glslStruct.h  glslSymbol.cpp  glslSymbol.h  hlslCrossCompiler.cpp  hlslCrossCompiler.h  hlslLinker.cpp  hlslLinker.h  hlslSupportLib.cpp  hlslSupportLib.h  propagateMutable.cpp  propagateMutable.h  typeSamplers.cpp  typeSamplers.h
hlslang/Include/: BaseTypes.h  Common.h  ConstantUnion.h  InfoSink.h  InitializeGlobals.h  InitializeParseContext.h  PoolAlloc.h  ShHandle.h  Types.h  intermediate.h
hlslang/MachineIndependent/: ConstantFolding.cpp  Gen_hlslang_tab.cpp  HLSL2GLSL.cpp  InfoSink.cpp  Initialize.cpp  Initialize.h  IntermTraverse.cpp  Intermediate.cpp  MMap.h  ParseHelper.cpp  ParseHelper.h  PoolAlloc.cpp  QualifierAlive.cpp  QualifierAlive.h  RemoveTree.cpp  RemoveTree.h  SymbolTable.cpp  SymbolTable.h  gen_hlslang.cpp  hlslang.l  hlslang.output  hlslang.y  hlslang_tab.h  intermOut.cpp  localintermediate.h  parseConst.cpp  unistd.h
hlslang/Public/: HLSL2GLSL.h
include/: hlsl2glsl.h
tests/: run_tests.pl
tests/combined/: index-matrix-assignment-fragment-out.txt  index-matrix-assignment-fragment-outES.txt  index-matrix-assignment-in.txt  index-matrix-assignment-vertex-out.txt  index-matrix-assignment-vertex-outES.txt
tests/fragment/: array-const-in.txt  array-const-out.txt  array-const-outES.txt  array-const-outES3.txt  array-constconst-in.txt  array-constconst-out.txt  array-constconst-outES.txt  array-constconst-outES3.txt  array-globalconst-init-out.txt  array-globalconst-init-outES3.txt  array-unsized-out.txt  array-unsized-outES.txt  array-unsized-outES3.txt  arrayglsl120-unsized-in.txt  arrayglsl120-unsized-out.txt  arrays-out.txt  arrays-outES.txt  arrays-outES3.txt  basic-out.txt  basic-outES.txt  basic-outES3.txt  complex-collectshadows-in.txt  complex-collectshadows-out.txt  complex-collectshadows-outES.txt  complex-flare-in.txt  complex-flare-out.txt  complex-flare-outES.txt  complex-fxaa-preset1-in.txt  complex-fxaa-preset1-out.txt  complex-fxaa-preset1-outES.txt  complex-fxaa-preset3-in.txt  complex-fxaa-preset3-out.txt  complex-fxaa-preset3-outES.txt  complex-fxaa3-11-consolepc-in.txt  complex-fxaa3-11-consolepc-out.txt  complex-fxaa3-11-consolepc-outES.txt  complex-fxaa3-11-pc39-in.txt  complex-fxaa3-11-pc39-out.txt  complex-fxaa3-11-pc39-outES.txt  complex-mia-lightmap-out.txt  (+223 more)
tests/fragment-120/: array-globalconst-init-out.txt  array-globalconst-init-out120arr.txt  array-globalconst-init-outES3.txt  array-unsized-out.txt  array-unsized-out120arr.txt  array-unsized-outES3.txt  const-var-from-function-out.txt  const-var-from-function-out120arr.txt  const-var-from-function-outES3.txt  decl-multiple-in.txt  decl-multiple-out.txt  decl-multiple-out120arr.txt  decl-multiple-outES3.txt  matrix-out.txt  matrix-outES3.txt  uniforms-out.txt  uniforms-out120arr.txt  uniforms-outES3.txt
tests/fragment-failures/: intrinsics-in.txt  intrinsics-out.txt  matrix-out.txt  matrixnonsquare-out.txt  non-matching-type-init-in.txt  non-matching-type-init-out.txt  ops-shiftbitwise-out.txt  pp-else-error-out.txt  pp-if-error-out.txt  pp-ifdef-error-out.txt  pp-redefinition-out.txt  pp-redefinitionfile-out.txt  pp-redefinitionline-out.txt  pp-too-many-macro-args-out.txt  pp-undef-empty-out.txt  pp-undef-file-out.txt  pp-undef-filetwice-out.txt  pp-undef-line-out.txt  unknown-out-semantics-out.txt
tests/hlsl2glsltest/: hlsl2glsltest.cpp  hlsl2glsltest.vcproj  hlsl2glsltest.vcxproj  main.cpp
tests/vertex/: MF-GodRays-in.txt  MF-GodRays-out.txt  MF-GodRays-outES.txt  MF-GodRays-outES3.txt  basic-mul-out.txt  basic-mul-outES.txt  basic-mul-outES3.txt  complex-collectshadows-in.txt  complex-collectshadows-out.txt  complex-collectshadows-outES.txt  complex-flare-in.txt  complex-flare-out.txt  complex-flare-outES.txt  complex-mia-lightmap-out.txt  complex-mia-lightmap-outES.txt  complex-mia-rt-out.txt  complex-mia-rt-outES.txt  complex-ogre-grass1-in.txt  complex-ogre-grass1-out.txt  complex-ogre-grass1-outES.txt  complex-ogre-grass2-in.txt  complex-ogre-grass2-out.txt  complex-ogre-grass2-outES.txt  complex-ogre-pssm-in.txt  complex-ogre-pssm-out.txt  complex-ogre-pssm-outES.txt  complex-particle-in.txt  complex-particle-out.txt  complex-particle-outES.txt  complex-prepasslight-in.txt  complex-prepasslight-out.txt  complex-prepasslight-outES.txt  complex-treeleaf-in.txt  complex-treeleaf-out.txt  complex-treeleaf-outES.txt  const-arg-in.txt  const-arg-out.txt  const-arg-outES.txt  const-expr-arraysize-in.txt  const-expr-arraysize-out.txt  (+139 more)
tests/vertex-120/: const-expr-init-in.txt  const-expr-init-out.txt  const-expr-init-out120arr.txt  const-expr-init-outES3.txt  global-init-outES3.txt
tests/vertex-failures/: array-size-out.txt  const-expr-arraysize-out.txt  global-init-out.txt  multiple-file-lines-in.txt  multiple-file-lines-out.txt  nested-unknown-types-in.txt  nested-unknown-types-out.txt  no-entry-point-in.txt  qualifiers-out.txt  undefined-type-in.txt  undefined-type-out.txt
tools/: bison.simple
(+70 files in other folders)
